# flamberge

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  README.md  flake.nix
.github/workflows/: ci.yml  claude-code-review.yml  claude.yml  nix.yml  package-managers.yml  release.yml
.serena/: project.yml
backlog/: config.yml
backlog/milestones/: m-0 - m1-—-kindle-mobipocket-(mvp-vertical-slice).md  m-1 - m2-—-kindle-topaz-&-kfx.md  m-2 - m3-—-adobe-adept-&-barnes-&-noble.md  m-3 - m4-—-ereader-&-kobo.md  m-4 - m5-—-platform-key-extraction.md  m-5 - m6-—-hardening,-cli-&-release.md
backlog/tasks/: task-1 - Parse-MOBI-PalmDoc-EXTH-headers.md  task-10 - Implement-Barnes-Noble-EPUB-decryption.md  task-11 - Implement-the-PDF-tokenizer-object-model.md  task-12 - Implement-ADEPT-BN-PDF-decryption-EBX_HANDLER.md  task-13 - Implement-eReader-.pdb-DRM-decryption-→-PML.md  task-14 - Implement-Kobo-KEPUB-DRM-decryption.md  task-15 - Kindle-key-extraction-.k4i-.kinf-Android.md  task-16 - Adobe-ADEPT-key-extraction-macOS-activation.dat-Windows-DPAPI.md  task-17 - Kobo-key-discovery-device-desktop-app.md  task-18 - CLI-polish-batch-mode-auto-key-discovery-wired-key-subcommands.md  task-19 - Cross-scheme-integration-test-suite-fixtures.md  task-2 - Implement-Mobipocket-DRM-decryption-PID-matching-record-decrypt.md  task-20 - CI-lint-gates-and-release-packaging.md  task-21 - Avoid-full-Object-clones-in-PdfDocument-get_object.md  task-22 - Dedupe-EPUB-test-scaffolding-into-epub_common.md  task-23 - Dedupe-Kobo-SQLite-WAL-patch-open-helper-across-keys-schemes.md  task-24 - Package-manager-distribution-Homebrew-winget-Chocolatey-mise-Linux-packages.md  task-25 - Release-does-not-auto-propagate-to-package-managers-GITHUB_TOKEN-cascade.md  task-3 - Wire-Mobipocket-into-the-CLI-with-output-naming-integration-test.md  task-4 - Implement-the-Topaz-TPZ0-container-parser.md  task-5 - Implement-Topaz-DRM-decryption-dkey-→-book-key-→-records.md  task-6 - Implement-the-Amazon-ION-binary-parser.md  task-7 - Implement-KFX-voucher-unwrap-content-decryption.md  task-8 - Implement-OCF-EPUB-reader-writer.md  task-9 - Implement-Adobe-ADEPT-EPUB-decryption-RSA-unwrap-AES.md
crates/dedrm-cli/: Cargo.toml
crates/dedrm-cli/src/: main.rs
crates/dedrm-cli/tests/: mobipocket_cli.rs
crates/dedrm-crypto/: Cargo.toml
crates/dedrm-crypto/src/: aes.rs  crc32.rs  des.rs  kdf.rs  lib.rs  pc1.rs  rc4.rs
crates/dedrm-formats/: Cargo.toml
crates/dedrm-formats/src/: lib.rs  mobi.rs  topaz_container.rs
crates/dedrm-keys/: Cargo.toml
crates/dedrm-keys/src/: ereader.rs  error.rs  ignoble.rs  kobo.rs  pid.rs
crates/dedrm-schemes/: Cargo.toml
crates/dedrm-schemes/src/: ereader.rs  error.rs  ignoble.rs  kfx.rs  kobo.rs  lib.rs  mobipocket.rs
crates/flamberge-cli/: Cargo.toml  README.md
crates/flamberge-cli/src/: autokeys.rs  decrypt.rs  keys.rs  main.rs  naming.rs
crates/flamberge-cli/tests/: mobipocket_cli.rs
crates/flamberge-crypto/: Cargo.toml
crates/flamberge-crypto/src/: aes.rs  crc32.rs  des.rs  digest.rs  error.rs  lib.rs  pc1.rs  rsa.rs  topaz.rs
crates/flamberge-formats/: Cargo.toml
crates/flamberge-formats/src/: error.rs  ion.rs  kfx_zip.rs  lib.rs  mobi.rs  ocf.rs  palmdb.rs  pdf.rs  pmlz.rs  topaz_container.rs
crates/flamberge-formats/src/pdf/: document.rs  filters.rs  lexer.rs  mod.rs  object.rs  parser.rs  serializer.rs
crates/flamberge-integration-tests/: Cargo.toml  README.md
crates/flamberge-integration-tests/src/: lib.rs
crates/flamberge-integration-tests/src/fixtures/: epub.rs  ereader.rs  kfx.rs  kobo.rs  mobipocket.rs  mod.rs  pdf.rs  topaz.rs
crates/flamberge-integration-tests/tests/: schemes.rs
crates/flamberge-keys/: Cargo.toml
crates/flamberge-keys/src/: adobe.rs  ereader.rs  error.rs  ignoble.rs  kindle.rs  kobo.rs  lib.rs  pid.rs
crates/flamberge-keys/src/adobe/: macos.rs  mod.rs  windows.rs
crates/flamberge-keys/src/kindle/: android.rs  k4i.rs  kinf.rs  mod.rs  obfuscation.rs
crates/flamberge-keys/src/kobo/: db.rs  host.rs  mod.rs
crates/flamberge-schemes/: Cargo.toml
crates/flamberge-schemes/src/: adept.rs  epub_common.rs  ereader.rs  error.rs  ignoble.rs  kfx.rs  kobo.rs  lib.rs  mobipocket.rs  pdf_common.rs  topaz.rs
crates/flamberge-schemes/src/ereader/: content.rs  header.rs  mod.rs  tests.rs
crates/flamberge-schemes/src/kobo/: content.rs  db.rs  mod.rs  tests.rs
docs/: DEDRM_SCHEMES.md  GUIDE.md
docs/ai/: STATUS.md
packaging/: README.md
packaging/aur/: .SRCINFO  PKGBUILD
packaging/chocolatey/: flamberge.nuspec
packaging/chocolatey/tools/: VERIFICATION.txt  chocolateyInstall.ps1  chocolateyUninstall.ps1
packaging/homebrew/: flamberge.rb
packaging/homebrew/tap/: README.md
packaging/scoop/: README.md  excavator.yml  flamberge.json
packaging/scripts/: update-homebrew-formula.sh
packaging/winget/: Kessriga.Flamberge.installer.yaml  Kessriga.Flamberge.locale.en-US.yaml  Kessriga.Flamberge.yaml
