[workspace]
resolver = "2"
members = [
    "crates/flamberge-crypto",
    "crates/flamberge-formats",
    "crates/flamberge-keys",
    "crates/flamberge-schemes",
    "crates/flamberge-cli",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.85"
license = "GPL-3.0-or-later"
repository = "https://github.com/kessriga/flamberge"
authors = ["Kessriga Jeukal"]

# Shared dependency versions. Individual crates opt in via `dep.workspace = true`.
[workspace.dependencies]
# workspace-internal
flamberge-crypto = { path = "crates/flamberge-crypto" }
flamberge-formats = { path = "crates/flamberge-formats" }
flamberge-keys = { path = "crates/flamberge-keys" }
flamberge-schemes = { path = "crates/flamberge-schemes" }

# errors
thiserror = "1"
anyhow = "1"

# encodings / helpers
byteorder = "1.5"
hex = "0.4"
base64 = "0.22"
log = "0.4"

# symmetric crypto (RustCrypto)
aes = "0.8"
cbc = { version = "0.1", features = ["alloc", "block-padding"] }
ecb = { version = "0.1", features = ["alloc", "block-padding"] }
ctr = "0.9"
des = "0.8"
cipher = "0.4"

# digests / kdf
md-5 = "0.10"
sha1 = "0.10"
sha2 = "0.10"
hmac = "0.12"
pbkdf2 = { version = "0.12", default-features = false, features = ["hmac"] }

# asymmetric crypto (Adobe ADEPT RSA unwrap, §7)
rsa = "0.9"
# RNG for test key generation only
rand = "0.8"

# containers
zip = { version = "2", default-features = false, features = ["deflate"] }
flate2 = "1"
quick-xml = "0.36"
# LZMA "alone"/legacy .lzma (FORMAT_ALONE) for KFX compressed pages (§3.4)
lzma-rs = "0.3"

# cli
clap = { version = "4", features = ["derive"] }

[profile.release]
lto = "thin"
