[package]
name = "dedrm-cli"
description = "Command-line DRM removal for ebooks (DeDRM, reimplemented in Rust)"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true

[[bin]]
name = "dedrm"
path = "src/main.rs"

[dependencies]
dedrm-crypto.workspace = true
dedrm-keys.workspace = true
dedrm-schemes.workspace = true
clap.workspace = true
anyhow.workspace = true
hex.workspace = true
