[package]
name = "dedrm-crypto"
description = "Shared cryptographic primitives for DeDRM (PC1, Topaz, AES, DES, RC4, CRC-32, digests, PBKDF2)"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
thiserror.workspace = true
aes.workspace = true
cbc.workspace = true
ecb.workspace = true
ctr.workspace = true
des.workspace = true
cipher.workspace = true
md-5.workspace = true
sha1.workspace = true
sha2.workspace = true
hmac.workspace = true
pbkdf2.workspace = true

[dev-dependencies]
hex.workspace = true
