[package]
name = "dedrm-schemes"
description = "Per-scheme DRM removal for DeDRM, composing formats + keys + crypto"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
dedrm-crypto.workspace = true
dedrm-formats.workspace = true
dedrm-keys.workspace = true
thiserror.workspace = true
