[package]
name = "flamberge-formats"
description = "Container parsers for Flamberge (PalmDB, Topaz TPZ0, KFX-ZIP, Amazon ION, EPUB/OCF, PDF)"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
keywords = ["ebook", "drm", "parser", "mobi", "epub"]
categories = ["parser-implementations", "encoding"]

[dependencies]
thiserror.workspace = true
byteorder.workspace = true
zip.workspace = true
flate2.workspace = true
quick-xml.workspace = true
