[package]
name = "flamberge-keys"
description = "Key acquisition for Flamberge: PID generation, offline name+CC keygen, and platform key extraction"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
keywords = ["drm", "ebook", "kindle", "adobe", "key"]
categories = ["cryptography"]

[dependencies]
flamberge-crypto.workspace = true
thiserror.workspace = true
hex.workspace = true
base64.workspace = true
# §6.4 Android extraction: zlib-inflate + untar `backup.ab`, read `map_data_storage.db`.
flate2.workspace = true
tar.workspace = true
rusqlite.workspace = true
tempfile.workspace = true
# §6.2 `.k4i` key databases are flat JSON (name → hex value).
serde_json.workspace = true
# §7.2 Adobe ADEPT: parse `activation.dat` (namespace-aware XML).
quick-xml.workspace = true

[dev-dependencies]
hex.workspace = true
# §7.2 tests synthesize a real RSA key to exercise activation.dat parsing.
rsa.workspace = true
rand.workspace = true
