[package]
name = "flamberge-schemes"
description = "Per-scheme DRM removal for Flamberge, composing formats + keys + crypto"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
flamberge-crypto.workspace = true
flamberge-formats.workspace = true
flamberge-keys.workspace = true
base64.workspace = true
flate2.workspace = true
lzma-rs.workspace = true
thiserror.workspace = true

[dev-dependencies]
zip.workspace = true
rsa.workspace = true
rand.workspace = true
